Add api server and create project,member schemas

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.2",
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.18.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
@@ -11,10 +13,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "client": "react-scripts start",
     "build": "react-scripts build",
     "test": "eslint src public && react-scripts test --env=jsdom",
     "test-dev": "eslint src public && react-scripts test --env=jsdom",
     "lint": "eslint src public",
-    "eject": "react-scripts eject"
-  }
+    "eject": "react-scripts eject",
+    "server": "nodemon ./server/index.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "proxy" : "http://localhost:4040/api/"
 }
