--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.2",
+    "ajv": "^6.5.4",
     "concurrently": "^4.0.1",
     "nodemon": "^1.18.4",
     "react": "^16.4.1",
@@ -22,5 +23,5 @@
     "server": "nodemon ./server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "proxy" : "http://localhost:4040/api/"
+  "proxy": "http://localhost:4040/api/"
 }
