--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+package.lock.json
+yarn.lock
+yarn-error.log
 
 npm-debug.log*
 yarn-debug.log*
