--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "contentful": "^7.0.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-progressive-image": "^0.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-slide-menu": "^0.5.1"
