--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "react-dom": "^16.4.1",
     "react-progressive-image": "^0.6.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "react-slide-menu": "^0.5.1"
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
