refactor and optimise shell.sh

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "./shell.sh && react-scripts start",
+    "start": "react-scripts start",
+    "compress": "./compress.sh",
     "client": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "./compress.sh && react-scripts build",
     "test": "eslint src public && react-scripts test --env=jsdom",
     "test-dev": "eslint src public && react-scripts test --env=jsdom",
     "lint": "eslint src public",
