--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-dom": "^16.6.0",
     "react-progressive-image": "^0.6.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,5 +18,11 @@
     "test-dev": "eslint src public && react-scripts test --env=jsdom",
     "lint": "eslint src public",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
