--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "mailtoui": "^1.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-progressive-image": "^0.6.0",
