--- a/src/json-files/project.json
+++ b/src/json-files/project.json
@@ -324,7 +324,7 @@
   },
   {
     "name": [],
-    "project": "Smart mirror",
+    "project": "Smart Mirror",
     "description": "A social engagement experiment to study the change in civic sense over time.",
     "links": {},
     "images": "smartMirror.jpg",
