--- a/src/json-files/ProjectsHome.json
+++ b/src/json-files/ProjectsHome.json
@@ -1,30 +1,31 @@
 [
   {
-    "name": "Suyog Jadhav",
-    "project": "FaceSearch",
-    "description": "Created a command-line tool that takes an image, detects faces in it, lets user select one and then tries to establish identity of the person by performing Google reverse Image search on the face. Used OpenCV?? Implemented in Python. Completed.",
-    "links": { "github": "https://github.com/IAmSuyogJadhav/FaceSearch" },
-    "images": "suyog-facesearch.png"
+    "name": ["Piyush Pandey, ","Pawan Sahu "],
+    "project": "Face-GAN",
+    "description": "Generating Human Faces in an unsupervised way with the help of WGAN using pytorch lightning framework",
+    "links": {"github":"https://github.com/P-yushh/Face-GAN"},
+    "images": "face_gan.png"
   },
   {
-    "name": "Udbhav Bamba",
-    "project": "Neural Style Transfer",
-    "description": "It is the implementation of \"A Neural Algorithm of Artistic Style\"\n(https://arxiv.org/pdf/1508.06576.pdf) paper by Leon A. Gatys, Alexander S. Ecker, Matthias Bethge.",
-    "links": { "github": "https://github.com/ubamba98/Neural-Style-Transfer" },
-    "images": "udbhav-neutralstyle.png"
+    "name": ["Chirag Jain"],
+    "project": "Click-ISM",
+    "description": "A campus portal that provides a Market Hub with some unique features of ‘unrestricted bidding’ and ‘product verification’. It allows the students to upload and sell their old products, on which other students can place bids within a range allowed by the seller.",
+    "links": {"github":"https://github.com/cjchirag7/click-ism"},
+    "images": "Click-ism.png"
   },
   {
-    "name": "Tejus",
-    "project": "MNIST Regeneration",
-    "description": "Recreated the Handwritten Digits from the MNIST Dataset using a Generative Adversarial Network(GAN), an implementation of \"Unsupervised Representation Learning with Deep Convolutional Generative Adversarial Networks\" (https://arxiv.org/pdf/1511.06434) paper.",
-    "links": { "github": "https://github.com/gktejus/GAN-for-MNIST" },
-    "images": "tejus-mnist.png"
+    "name": ["Rishabh Tiwari, ","Ridhish Jain, ","Rishabh Aggarwal, ","Nainesh Hulke "],
+    "project": "Medidoc",
+    "description": "AI based medical app-web platform for prognosis of severe yet curable diseases like Diabetic Retinopathy, Brain Tumor, Skin Cancer, etc.",
+    "links": {"github":"https://drive.google.com/drive/folders/1Ivls8uP5x2iI5QzlPhCL_ZaL8G7CQOEm"},
+    "images": "medidoc.png"
   },
   {
-    "name": "Aditya Mudgil",
-    "project": "AR Ruler",
-    "description": "AR_Ruler is a powerful application which can measure any distance between two given points in all the three axis separately. It can measure distance between any two point in cm, inch, m, foot. This is made in Unity with Vuforia.",
-    "links": { "github": "https://github.com/adityamudgil2505/AR_Ruler" },
-    "images": "aditya-ruler.jpg"
+    "name": ["Sandeep Kumar Auddy"],
+    "project": "Pantomath",
+    "description": "Pantomath is a quizing website where one can challenge other users. Both the users will be given 5 random questions. The winner will be awareded with an increase in their rank (depending upon noth the margin of win, and the difference of rank between the two players)",
+    "links": {"github":"https://github.com/SandeepKumarAuddy/pantomath-quiz"},
+    "images": "pantomath.png"
   }
+  
 ]
