--- a/src/json-files/project.json
+++ b/src/json-files/project.json
@@ -15,9 +15,16 @@
   },
   {
     "name": ["Aman Dwivedi"],
+    "project": "Pen Name Chooser",
+    "description": "Pen Name Chooser is a website that helps you to select a unique pen name for your online presence, be it any coding platform, social media platform or content writing platform.",
+    "links": {"github":"https://github.com/Aman-Codes/pennamechooser"},
+    "images": "pennamechooser.png"
+  },
+  {
+    "name": ["Aman Dwivedi"],
     "project": "MedBuddy",
-    "description": "A web platform which connects doctors, patients and services like ambulance provider. Patient can choose a date and doctor to consult, the system will automatically generate appointment time based on doctor's schedule. Patient can also view his current and past appointments and book ambulance service. Doctor on the other hand can accept/reject the appointment, view all his current and past appintment and upload detailed prescription for the patient. The website is hosted at https://hospital-help.herokuapp.com/",
-    "links": {"github":"https://github.com/Aman-Codes/HospitalWebsite"},
+    "description": "A web platform which connects doctors, patients and services like ambulance provider. Patient can choose a date and doctor to consult, the system will automatically generate appointment time based on doctor's schedule. Patient can also view his current and past appointments and book ambulance service. Doctor on the other hand can accept/reject the appointment, view all his current and past appintment and upload detailed prescription for the patient. The website is hosted at https://medicalbuddy.herokuapp.com/",
+    "links": {"github":"https://github.com/Aman-Codes/MedBuddy"},
     "images": "medBuddy.png"
   },
   {
